# eval-notch

./: pyproject.toml
data/: eval-0-99.csv  eval-100-199.csv  eval-200-250.csv  generations.json  results.csv  sample.csv
notebooks/: 0-eval-data-quality.ipynb  0-sample-data-quality.ipynb  domains_related-mismatch-examples.txt  postal_code-mismatch-examples.txt
