[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Neel Gokhale <neel@cohere.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cohere = "^5.8.1"
langchain-cohere = "^0.2.2"
langchain-openai = "^0.1.21"
python-dotenv = "^1.0.1"
ipykernel = "^6.29.5"
langchain-anthropic = "^0.1.23"
ratelimit = "^2.2.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
